# VOOM

./: CMakeLists.txt  Dependencies.md  README.md  build.sh  script
Cameras/: MI9T_640x360.yaml  MI9T_640x360_0.6.yaml  TUM1.yaml  TUM2.yaml  TUM3.yaml  deer_walk.yaml  diamond_vr_slow.yaml
Data/diamond_dji/: diamond_dji_associated.txt
Data/diamond_ground/: detections_yolov8x_seg_diamond_ground_robot_with_ellipse.json  diamond_ground_robot_associated.txt
Data/diamond_head/: detections_yolov8x_seg_diamond_walk_head_with_ellipse.json  diamond_walk_head_associated.txt
Data/diamond_walk/: diamond_walk_associated.txt
Data/fr2_person/: fr2_person_associated.txt
Examples/: rgbd_diamond_with_ellipse.cc  rgbd_tum_with_ellipse.cc
PythonScripts/: camera_pose_object.py  find_diamond_corresponds.py  find_tum_corresponds.py  generate_detection_files.py  generate_rgbd_association.py  process_diamond_gt.py
include/: Camera.h  ColorManager.h  Distance.h  Ellipse.h  Ellipsoid.h  Frame.h  FrameDrawer.h  Graph.h  ImageDetections.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBmatcher.h  Object.h  ObjectMatcher.h  OptimizerObject.h  Osmap.h  PnPsolver.h  Reconstruction.h  RingBuffer.h  Scene.h  System.h  Tracking.h  Utils.h  Viewer.h  osmap.pb.h  p3p.h  rendertree.h  shader.h
src/: ARViewer.cc  Camera.cc  ColorManager.cc  Distance.cc  Ellipse.cc  Ellipsoid.cc  Frame.cc  FrameDrawer.cc  Graph.cc  ImageDetections.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  ORBmatcher.cc  Object.cc  ObjectMatcher.cc  Optimizer.cc  OptimizerObject.cc  Osmap.cpp  PnPsolver.cc  Reconstruction.cc  Scene.cc  System.cc  Tracking.cc  Utils.cc  Viewer.cc  osmap.pb.cc  p3p.cc
